--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "socket.io": "~0.9.16",
     "uuid": "^1.4.1"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": "0.10.x"
+  }
 }
