--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js"
   },
-   "repository": {
+  "repository": {
     "type": "git",
     "url": "https://github.com/bcldvd/real-time-planning-poker.git"
   },
@@ -26,7 +26,8 @@
     "twilio": "~1.5.0",
     "validator": "~3.2.1",
     "socket.io": "~0.9.16",
-    "uuid": "^1.4.1"
+    "uuid": "^1.4.1",
+    "ent": "^0.1.0"
   },
   "license": "MIT",
   "engines": {
